Frontend refactor and additional parameters

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,51 +6,52 @@
     <title>Pokedex</title>
     <link rel="stylesheet" href="style.css">
     <!-- Optional: Add Favicon -->
-    <!-- <link rel="icon" type="image/png" href="/path/to/favicon.png"> -->
+    <!-- <link rel="icon" type="image/png" href="favicon.png"> -->
 </head>
 <body>
-    <h1>Pokedex Application</h1>
+    <!-- Simple Header -->
+    <header class="main-header">
+        <h1>Pokedex</h1>
+    </header>
 
-    <!-- Filter Controls Container -->
-    <div class="controls">
-        <!-- Search by Name/ID -->
-        <input type="search" id="search-input" placeholder="Search by Name or ID...">
+    <main class="container">
+        <!-- Filter Controls -->
+        <div class="controls">
+            <input type="search" id="search-input" placeholder="Search by Name or ID...">
+            <select id="generation-filter">
+                <option value="">All Generations</option>
+                <!-- Dynamically populated -->
+            </select>
+            <fieldset id="type-filter">
+                <legend>Filter by Type (AND):</legend>
+                <div id="type-checkboxes-container">
+                     <span class="placeholder-text">Loading types...</span>
+                     <!-- Dynamically populated -->
+                </div>
+            </fieldset>
+        </div>
 
-        <!-- Generation Filter Dropdown -->
-        <select id="generation-filter">
-            <option value="">All Generations</option>
-            <!-- Generation options (e.g., Gen 1, Gen 2...) will be dynamically populated by JS from /api/generations -->
-        </select>
+        <!-- Loading Indicator for the list -->
+        <div id="loading-indicator" style="display: none;">Loading Pokémon... Please wait.</div>
 
-        <!-- Type Filter Checkboxes -->
-        <fieldset id="type-filter">
-            <legend>Filter by Type (AND logic):</legend>
-            <div id="type-checkboxes-container">
-                 <!-- Type checkboxes (e.g., Fire, Water...) will be dynamically populated by JS from /api/types -->
-                 <span class="placeholder-text">Loading types...</span>
-            </div>
-        </fieldset>
-    </div>
-
-    <!-- Loading Indicator for the main list -->
-    <div id="loading-indicator" style="display: none;">Loading Pokémon... Please wait.</div>
-
-    <!-- Container for the Pokémon list cards -->
-    <div id="pokedex-list">
-        <!-- Pokémon list cards will be dynamically populated here by JS using data from /api/pokedex/summary -->
-    </div>
+        <!-- Container for the Pokémon list cards -->
+        <div id="pokedex-list">
+            <!-- Pokémon cards dynamically populated here -->
+        </div>
+    </main>
 
     <!-- Modal Dialog for Pokémon Details -->
     <div id="pokemon-detail-modal" class="modal" style="display: none;">
         <div class="modal-content">
-            <!-- Close button for the modal -->
+            <!-- Close button -->
             <span class="close-button">×</span>
-            <h2>Pokémon Details</h2>
-            <!-- Container for the detailed content -->
+            <!-- Header bar inside modal -->
+            <div class="modal-header-bar"></div>
+             <!-- Container for the dynamically rendered detail content -->
             <div id="pokemon-detail-content">
-                <!-- Loading Indicator for the details within the modal -->
+                 <!-- Loading Indicator for the details within the modal -->
                 <div id="detail-loading-indicator" style="display: none;">Loading details...</div>
-                <!-- Detailed Pokémon info will be loaded here by JS using data from /api/pokemon/{id_or_name} -->
+                <!-- Detailed Pokémon info rendered here by JS -->
             </div>
         </div>
     </div>
