add status flag filters

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -29,6 +29,26 @@
                      <!-- Dynamically populated -->
                 </div>
             </fieldset>
+
+            <!-- Status Filter -->
+            <fieldset id="status-filter">
+                <legend>Filter by Status:</legend>
+                <div id="status-checkboxes-container">
+                    <div class="status-checkbox-item">
+                        <input type="checkbox" id="status-baby" value="is_baby" class="status-filter-checkbox">
+                        <label for="status-baby">Baby</label>
+                    </div>
+                    <div class="status-checkbox-item">
+                        <input type="checkbox" id="status-legendary" value="is_legendary" class="status-filter-checkbox">
+                        <label for="status-legendary">Legendary</label>
+                    </div>
+                    <div class="status-checkbox-item">
+                        <input type="checkbox" id="status-mythical" value="is_mythical" class="status-filter-checkbox">
+                        <label for="status-mythical">Mythical</label>
+                    </div>
+                </div>
+            </fieldset>
+            <!-- End Status Filter -->
         </div>
 
         <!-- Loading Indicator for the list -->
