add maintenance screen

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -120,6 +120,16 @@
     </div>
     <!-- End Sprite Viewer Overlay -->
 
+    <!-- Maintenance Overlay -->
+    <div id="maintenance-overlay" class="maintenance-overlay" style="display: none;">
+        <div class="maintenance-content">
+            <h2>⚙️ Pokedex Maintenance ⚙️</h2>
+            <p id="maintenance-message">The Pokedex data is being updated. Please check back shortly!</p>
+            <div class="spinner"></div> <!-- Optional simple spinner -->
+        </div>
+    </div>
+    <!-- End Maintenance Overlay -->
+
     <!-- Link to the JavaScript file -->
     <script src="script.js"></script>
 </body>
