--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
     <title>Pokedex</title>
     <link rel="stylesheet" href="style.css">
     <!-- Optional: Add Favicon -->
-    <!-- <link rel="icon" type="image/png" href="favicon.png"> -->
+    <link rel="icon" type="image/png" href="/assets/icons/favicon.png">
 </head>
 <body>
     <!-- Simple Header -->
