update icons for shadown, unknown, stellar

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,7 +11,9 @@
 <body>
     <!-- Simple Header -->
     <header class="main-header">
-        <h1>Pokedex</h1>
+        <img src="/assets/icons/pokeball-space.png" alt="Pokedex Logo1" class="header-logo">
+        <h1>Meatydex</h1>
+        <img src="/assets/icons/pokeball-moon.png" alt="Pokedex Logo2" class="header-logo">
     </header>
 
     <main class="container">
