Add better error handling pages

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -72,6 +72,14 @@
         </div>
         <!-- End Results Counter -->
 
+        <!-- Error Display Area -->
+        <div id="error-display" class="error-display" style="display: none;">
+            <h2>⚠️ Error Loading Pokedex Data ⚠️</h2>
+            <p id="error-message"></p>
+            <p>Please try refreshing the page. If the problem persists, the service might be temporarily unavailable.</p>
+        </div>
+        <!-- End Error Display Area -->
+
         <!-- Loading Indicator for the list -->
         <div id="loading-indicator" style="display: none;">Loading Pokémon... Please wait.</div>
 
